Fix broken header format on smaller screens

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -211,7 +211,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1023.5px) {
+@media screen and (max-width: 1040px) {
   .navbar-brand {
     height: inherit;
   }
